IrshadDev/src/objects/GeWS_Security_Credential__c.object
<CustomObject>
    <description>Ge - General
WS - Web Service Framework

Used to store credentials for accessing external Service</description>
    <fields>
        <fullName>GeWS_API_Key_Location__c</fullName>
        <label>API Key Location</label>
        <picklist>
            <picklistValues>
                <fullName>Header</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parameter On URI</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GeWS_API_Key__c</fullName>
        <label>API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeWS_API_Secret__c</fullName>
        <label>API Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeWS_API_key_Variable_to_use__c</fullName>
        <label>API key Variable to use</label>
        <picklist>
            <picklistValues>
                <fullName>key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X-FullContact-APIKey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>apikey</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GeWS_Authentication_Endpoint__c</fullName>
        <label>Authentication Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GeWS_Certificate_Name__c</fullName>
        <label>Certificate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeWS_Credential_Identifier__c</fullName>
        <externalId>true</externalId>
        <label>Credential Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GeWS_Credential_Type__c</fullName>
        <label>Credential Type</label>
        <picklist>
            <picklistValues>
                <fullName>Basic Auth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OAuth 1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OAuth 1.0a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OAuth 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>API Key Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ocp-Apim-Subscription-Key</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GeWS_Grant_Type__c</fullName>
        <label>Grant Type</label>
        <picklist>
            <picklistValues>
                <fullName>password</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>authorization_code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>client_credentials</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GeWS_OAuth_Token_Secret__c</fullName>
        <label>OAuth Token Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeWS_OAuth_Token__c</fullName>
        <label>OAuth Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeWS_Password__c</fullName>
        <label>Password</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>GeWS_User_Agent__c</fullName>
        <label>User Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeWS_Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Security Credential</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Security Credential Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Security Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>